[package]
name = "stranger_api_server"
version = "0.1.0"
edition = "2024"

[dependencies]
stranger_jail = { path = "../stranger_jail" }

anyhow = "1.0.100"
bollard = "0.19.3"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
axum = { version = "0.8.6", features = ["macros"] }
