[package]
name = "stranger_jail"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.7.1"
bollard = "0.19.3"
futures-util = "0.3.31"
parking_lot = "0.12.5"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
